--- a/KuranX.App/Core/Pages/ReminderF/RemiderItem.xaml
+++ b/KuranX.App/Core/Pages/ReminderF/RemiderItem.xaml
@@ -1,5 +1,5 @@
-﻿<Page x:Class="KuranX.App.Core.Pages.NoteF.NoteItem"
-      xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
+﻿<Page x:Class="KuranX.App.Core.Pages.ReminderF.RemiderItem"
+    xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
       xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
       xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
       xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
@@ -8,8 +8,10 @@
        xmlns:gif="http://wpfanimatedgif.codeplex.com"
       mc:Ignorable="d"
       d:DesignHeight="708" d:DesignWidth="1115" d:MaxHeight="708" d:MaxWidth="1270" d:MinWidth="1115"
-      Title="NoteItem" Background="#FAFAFA" Loaded="Page_Loaded">
+      Title="RemiderFrame" Background="#FAFAFA" Loaded="Page_Loaded">
+
     <Grid>
+
         <Grid x:Name="loadinGifContent" Grid.Row="1" Background="#FAFAFA" Panel.ZIndex="5" Visibility="Collapsed">
             <Image gif:ImageBehavior.AnimatedSource="/Resource/Images/Gif/Spinner800.gif" Width="250" Height="250"  RenderOptions.BitmapScalingMode="HighQuality" />
         </Grid>
@@ -27,7 +29,7 @@
                             <ColumnDefinition Width="90" />
                             <ColumnDefinition Width="*" />
                         </Grid.ColumnDefinitions>
-                        <Border Grid.Column="0" Background="#F0433A" CornerRadius="5 0 0 5"></Border>
+                        <Border Grid.Column="0" Background="#F0433A" CornerRadius="5 0 0 5" />
                         <StackPanel Grid.Column="1" VerticalAlignment="Center" HorizontalAlignment="Center">
                             <Icon:PackIconOcticons Kind="Alert" Width="48" Height="48" Foreground="#F0433A" />
                         </StackPanel>
@@ -56,7 +58,7 @@
                             <ColumnDefinition Width="90" />
                             <ColumnDefinition Width="*" />
                         </Grid.ColumnDefinitions>
-                        <Border Grid.Column="0" Background="#0D6EFD" CornerRadius="5 0 0 5"></Border>
+                        <Border Grid.Column="0" Background="#0D6EFD" CornerRadius="5 0 0 5" />
                         <StackPanel Grid.Column="1" VerticalAlignment="Center" HorizontalAlignment="Center">
                             <Icon:PackIconUnicons Kind="Info" Width="48" Height="48" Foreground="#0D6EFD" />
                         </StackPanel>
@@ -84,7 +86,7 @@
                             <ColumnDefinition Width="90" />
                             <ColumnDefinition Width="*" />
                         </Grid.ColumnDefinitions>
-                        <Border Grid.Column="0" Background="#66E21F" CornerRadius="5 0 0 5"></Border>
+                        <Border Grid.Column="0" Background="#66E21F" CornerRadius="5 0 0 5" />
                         <StackPanel Grid.Column="1" VerticalAlignment="Center" HorizontalAlignment="Center">
                             <Icon:PackIconIonicons Kind="CheckmarkMD" Width="48" Height="48" Foreground="#66E21F" />
                         </StackPanel>
@@ -108,7 +110,7 @@
                         <RowDefinition Height="120" />
                     </Grid.RowDefinitions>
                     <Border  Grid.Row="0" Style="{DynamicResource headerBorderTemp}">
-                        <TextBlock Text="Konuyu Sil" Style="{DynamicResource popupHeaderText}" />
+                        <TextBlock Text="Hatırlatıcıyı Sil" Style="{DynamicResource popupHeaderText}" />
                     </Border>
                     <Grid Grid.Row="1">
                         <Grid.RowDefinitions>
@@ -116,7 +118,7 @@
                             <RowDefinition Height="50" />
                         </Grid.RowDefinitions>
                         <StackPanel Orientation="Vertical" HorizontalAlignment="Center" VerticalAlignment="Center" Width="280" Grid.Row="0">
-                            <TextBlock Text=" Notu Silmek istediğinize eminmisiniz bu işlem geri alınamaz. " TextWrapping="Wrap" TextAlignment="Center" FontFamily="{DynamicResource PoppinsMedium}" FontSize="14" Foreground="#1C1E2F" HorizontalAlignment="Center" VerticalAlignment="Center" />
+                            <TextBlock Text=" Hatırlatıcıyı istediğinize eminmisiniz bu işlem geri alınamaz. " TextWrapping="Wrap" TextAlignment="Center" FontFamily="{DynamicResource PoppinsMedium}" FontSize="14" Foreground="#1C1E2F" HorizontalAlignment="Center" VerticalAlignment="Center" />
                         </StackPanel>
                         <Grid Grid.Row="1" VerticalAlignment="Center" HorizontalAlignment="Center">
                             <Grid.ColumnDefinitions>
@@ -124,7 +126,7 @@
                             </Grid.ColumnDefinitions>
 
                             <StackPanel Orientation="Horizontal" VerticalAlignment="Center" HorizontalAlignment="Center" Grid.Column="0">
-                                <Button x:Name="deleteSubjectPopupBtn" Style="{DynamicResource popupDefaultButtonRest}" Tag="Trash" Content="Sil" HorizontalAlignment="Center" Click="deleteNotePopupBtn_Click" />
+                                <Button x:Name="deleteSubjectPopupBtn" Style="{DynamicResource popupDefaultButtonRest}" Tag="Trash" Content="Sil" HorizontalAlignment="Center" Click="deleteRemiderPopupBtn_Click" />
                                 <Button  Style="{DynamicResource popupDefaultButtonClosed}" Tag="CloseBig" Content="Vazgeç" Uid="deleteNotepopup" HorizontalAlignment="Center" Click="popupClosed_Click" />
                             </StackPanel>
                         </Grid>
@@ -140,23 +142,19 @@
                     <RowDefinition Height="70" />
                     <RowDefinition Height="490" />
                 </Grid.RowDefinitions>
+
                 <StackPanel Grid.Row="0" Orientation="Vertical" VerticalAlignment="Center">
                     <Border Style="{DynamicResource frameTab}">
                         <Grid>
                             <Grid.ColumnDefinitions>
                                 <ColumnDefinition Width="10" />
                                 <ColumnDefinition Width="*" />
-                                <ColumnDefinition Width="250" />
                             </Grid.ColumnDefinitions>
-                            <Border Grid.Column="0"  CornerRadius="5 0 0 5" x:Name="noteType" />
-
-                            <StackPanel Grid.Column="1" Orientation="Vertical" Margin="10 5 10 5">
-                                <TextBlock x:Name="header" Text="" Foreground="#1C1E2F" FontFamily="{DynamicResource PoppinsSemiBold}" FontSize="16" />
-                                <TextBlock x:Name="create" Text="" Foreground="#7B7B7B" FontFamily="{DynamicResource PoppinsMedium}" FontSize="11" Margin="0 5 0 5" />
-                                <TextBlock x:Name="location" Text="" Foreground="#C9283E" FontFamily="{DynamicResource PoppinsMedium}" FontSize="11" />
-                            </StackPanel>
-                            <StackPanel Grid.Column="2" Orientation="Horizontal" VerticalAlignment="Center">
-                                <TextBlock TextWrapping="Wrap" TextAlignment="Center" Width="250" x:Name="infoText" Text="" Foreground="#C9283E" FontFamily="{DynamicResource PoppinsMedium}" FontSize="12" />
+                            <Border Grid.Column="0"  CornerRadius="5 0 0 5" x:Name="remiderType" />
+                            <StackPanel Grid.Column="1" Orientation="Vertical" VerticalAlignment="Center" Margin="10 5 10 5">
+                                <TextBlock x:Name="header" Text="Remider NAME" Foreground="#1C1E2F" FontFamily="{DynamicResource PoppinsSemiBold}" FontSize="16" />
+                                <TextBlock x:Name="create" Text="CREATE" Foreground="#7B7B7B" FontFamily="{DynamicResource PoppinsMedium}" FontSize="11" Margin="0 5 0 5" />
+                                <TextBlock x:Name="type" Text="Type"  FontFamily="{DynamicResource PoppinsMedium}" FontSize="11" />
                             </StackPanel>
                         </Grid>
                     </Border>
@@ -167,8 +165,7 @@
                         <ColumnDefinition Width="*" />
                         <ColumnDefinition Width="*" />
                         <ColumnDefinition Width="*" />
-                        <ColumnDefinition Width="*" />
-                        <ColumnDefinition Width="*" />
+
                         <ColumnDefinition Width="*" />
                     </Grid.ColumnDefinitions>
 
@@ -177,14 +174,12 @@
                     </Grid.RowDefinitions>
                     <Button x:Name="gotoBackButton" Grid.Column="0" Style="{DynamicResource noteControlBackBtn}" Tag="ArrowLeft" Content="Geri Dön" Click="gotoBackButton_Click" />
                     <Button x:Name="gotoVerseButton" Grid.Column="1" Style="{DynamicResource noteControlBackGo}" Tag="ArrowRight" Content="Ayete Git" Click="gotoVerseButton_Click" />
-                    <Button x:Name="sendResult" Grid.Column="2" Style="{DynamicResource noteControlBackSend}" Tag="Archive" Content="Sonuç" />
-                    <Button x:Name="printButton" Grid.Column="3" Style="{DynamicResource noteControlBackPrint}" Tag="Printer" Content="Yazdır" Click="printButton_Click" />
-                    <Button x:Name="deleteButton" Grid.Column="4" Style="{DynamicResource noteControlBackDelete}" Tag="Trash" Content="Notu Sil" Click="deleteButton_Click" />
-                    <Button x:Name="saveButton" Grid.Column="5" IsEnabled="False" Style="{DynamicResource noteControlBackSave}" Tag="Save" Content="Kaydet" Click="saveButton_Click" />
+                    <Button x:Name="deleteButton" Grid.Column="2" Style="{DynamicResource noteControlBackDelete}"  Width="200" Tag="Trash" Content="Hatırlatıcıyı Sil" Click="deleteButton_Click" />
+                    <Button x:Name="saveButton" Grid.Column="3" IsEnabled="False" Style="{DynamicResource noteControlBackSave}" Tag="Save" Content="Kaydet" Click="saveButton_Click" />
                 </Grid>
                 <Border Grid.Row="3" Grid.ColumnSpan="2" Padding="10" Background="#fff" Style="{DynamicResource defaultBorderShadowEffect}">
 
-                    <TextBox x:Name="noteDetail" TextWrapping="Wrap" AcceptsReturn="True" MaxLength="3500" Style="{DynamicResource noteDetailTxtBox}" Text="" TextChanged="noteDetail_TextChanged" />
+                    <TextBox x:Name="remiderDetail" TextWrapping="Wrap" AcceptsReturn="True" MaxLength="3500" Style="{DynamicResource noteDetailTxtBox}" Text="" TextChanged="noteDetail_TextChanged" />
                 </Border>
             </Grid>
         </Border>
