--- a/KuranX.App/Core/Pages/SubjectF/SubjectItemFrame.xaml
+++ b/KuranX.App/Core/Pages/SubjectF/SubjectItemFrame.xaml
@@ -382,7 +382,7 @@
         <StackPanel Grid.Row="0" VerticalAlignment="Center" HorizontalAlignment="Center" SnapsToDevicePixels="True" UseLayoutRounding="True" x:Name="loadHeaderAni" Style="{DynamicResource aniEffectFadeStack}" Visibility="Hidden">
             <Border Width="350" Height="80" Style="{DynamicResource defaultBorderShadowEffect}">
                 <StackPanel Orientation="Horizontal">
-                    <Border x:Name="loadBgColor" Width="12" CornerRadius="5 0 0 5" Background="#66E21F" />
+                    <Border x:Name="loadBgColor" Width="12" CornerRadius="5 0 0 5" />
                     <Border Width="250" HorizontalAlignment="Center" VerticalAlignment="Center" Padding="10 0 10 0">
                         <StackPanel Orientation="Vertical">
                             <TextBlock x:Name="loadHeader" Text="" FontSize="18" Style="{DynamicResource subjectFolderHeader}" />
@@ -415,7 +415,7 @@
             </Grid>
         </Border>
 
-        <StackPanel Grid.Row="2" UseLayoutRounding="True" SnapsToDevicePixels="True" x:Name="loadDetailAni" Style="{DynamicResource aniEffectFadeStack}" Visibility="Hidden">
+        <StackPanel Grid.Row="2" UseLayoutRounding="True" SnapsToDevicePixels="True" x:Name="loadDetailAni" Style="{DynamicResource aniEffectFadeStack}" Visibility="Visible">
 
             <Border Style="{DynamicResource defaultBorderShadowEffect}" Margin="25,5,25,5">
                 <Grid>
