--- a/KuranX.App/Core/Pages/TestFrame.xaml
+++ b/KuranX.App/Core/Pages/TestFrame.xaml
@@ -4,6 +4,7 @@
       xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
       xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
       xmlns:local="clr-namespace:KuranX.App.Core.Pages"
+       xmlns:sys="clr-namespace:System;assembly=mscorlib"
        xmlns:Icon="http://metro.mahapps.com/winfx/xaml/iconpacks"
        xmlns:gif="http://wpfanimatedgif.codeplex.com"
       mc:Ignorable="d"
@@ -11,8 +12,6 @@
       Title="TestFrame" Background="#FAFAFA">
 
     <Grid>
-
-        <Label Content="TEST PAGE" />
 
         <!--<Popup x:Name="resetSurepopup" IsOpen="False" Placement="Center" AllowsTransparency="True" Width="300" Height="190" VerticalAlignment="Center" HorizontalAlignment="Center" PopupAnimation="Fade">-->
     </Grid>
